Landing Page UI added for Amarttrak Website

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
+    <meta name="copyright" content="Smarttrak AI"/>
     <meta name="description" content="Smarttrak AI"/>
+    <meta name="keywords" content="Smarttrak, AI, Solar, Marketing"/>
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/owl.theme.default.min.css"/>
