theme-color-changed

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="theme-color" content="#000000"/>
     <meta name="copyright" content="Smarttrak AI"/>
     <meta name="description" content="Smarttrak AI"/>
     <meta name="keywords" content="Smarttrak, AI, Solar, Marketing"/>
 
-    <meta name="msapplication-TileColor" content="#ffffff"/>
-    <meta name="theme-color" content="#ffffff"/>
+    <meta name="msapplication-TileColor" content="#7684ea"/>
+    <meta name="theme-color" content="#7684ea"/>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/animate.min.css" type="text/css" media="all">
